[package]
name    = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde        = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json   = { version = "1.0" }
log          = { version = "0.4" }
simplelog    = { version = "0.12" }
walkdir      = { version = "2.3" }
thiserror    = { version = "1.0" }
